<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/nav_header"
            layout="@layout/nav_header_main"
            android:layout_width="0dp"
            android:layout_height="160dp"
            app:layout_constraintBottom_toTopOf="@id/drawer_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <ScrollView
            android:id="@+id/drawer_divider"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nav_header">



            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/list_Item"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/size_10">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/drawer_share_item"
                    style="@style/drawer_card"
                    android:elevation="2dp"
                    app:layout_constraintBottom_toTopOf="@+id/drawer_rate_item"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/drawer_item3_icon"
                        style="@style/drawerMainIcon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_drawer_share_icon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/drawer_share_text"
                        android:textColor="@color/white"
                        android:fontFamily="@font/baloo"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        app:layout_constraintBottom_toBottomOf="@+id/drawer_item3_icon"
                        app:layout_constraintStart_toEndOf="@+id/drawer_item3_icon"
                        app:layout_constraintTop_toTopOf="@+id/drawer_item3_icon" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/drawer_rate_item"
                    style="@style/drawer_card"
                    android:elevation="2dp"
                    app:layout_constraintBottom_toTopOf="@+id/drawer_about_item"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/drawer_share_item">

                    <ImageView
                        android:id="@+id/drawer_item4_icon"
                        style="@style/drawerMainIcon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_drawer_rating_icon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/drawer_rate_text"
                        android:fontFamily="@font/baloo"
                        android:textColor="@color/white"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        app:layout_constraintBottom_toBottomOf="@+id/drawer_item4_icon"
                        app:layout_constraintStart_toEndOf="@+id/drawer_item4_icon"
                        app:layout_constraintTop_toTopOf="@+id/drawer_item4_icon" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/drawer_about_item"
                    style="@style/drawer_card"
                    android:elevation="2dp"
                    app:layout_constraintBottom_toTopOf="@+id/drawer_privacy_item"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/drawer_rate_item">

                    <ImageView
                        android:id="@+id/drawer_item5_icon"
                        style="@style/drawerMainIcon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_drawer_about_icon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/drawer_about_text"
                        android:fontFamily="@font/baloo"
                        android:textColor="@color/white"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        app:layout_constraintBottom_toBottomOf="@+id/drawer_item5_icon"
                        app:layout_constraintStart_toEndOf="@+id/drawer_item5_icon"
                        app:layout_constraintTop_toTopOf="@+id/drawer_item5_icon" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/drawer_privacy_item"
                    style="@style/drawer_card"
                    android:elevation="2dp"
                    app:layout_constraintBottom_toBottomOf="@+id/drawer_faq_item"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/drawer_about_item">

                    <ImageView
                        android:id="@+id/drawer_item6_icon"
                        style="@style/drawerMainIcon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_drawer_policy_icon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/drawer_policy_text"
                        android:fontFamily="@font/baloo"
                        android:textColor="@color/white"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        app:layout_constraintBottom_toBottomOf="@+id/drawer_item6_icon"
                        app:layout_constraintStart_toEndOf="@+id/drawer_item6_icon"
                        app:layout_constraintTop_toTopOf="@+id/drawer_item6_icon" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/drawer_faq_item"
                    style="@style/drawer_card"
                    android:elevation="2dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/drawer_privacy_item">

                    <ImageView
                        android:id="@+id/drawer_item7_icon"
                        style="@style/drawerMainIcon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_drawer_faq_icon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/drawer_faq_text"
                        android:fontFamily="@font/baloo"
                        android:textColor="@color/white"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        app:layout_constraintBottom_toBottomOf="@+id/drawer_item7_icon"
                        app:layout_constraintStart_toEndOf="@+id/drawer_item7_icon"
                        app:layout_constraintTop_toTopOf="@+id/drawer_item7_icon" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>